# icn-network

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.simple  README-NETWORK.md  README-NEW.md  README-testnet.md  README.md  SUMMARY.md  codedump  codedump_output.txt  docker-compose.yml  docsdump.sh  docsdump_output.txt
crates/apps/: Cargo.toml
crates/apps/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/icn-common/: Cargo.toml
crates/core/icn-common/src/: config.rs  error.rs  federation.rs  lib.rs  logging.rs  result.rs  types.rs  utils.rs
crates/core/icn-crypto/: Cargo.toml
crates/core/icn-crypto/src/: ed25519.rs  error.rs  hash.rs  key.rs  keys.rs  lib.rs  signature.rs
crates/core/src/: lib.rs  storage.rs
crates/core/src/common/: error.rs  types.rs
crates/core/src/config/: command_line.rs  env.rs  mod.rs
crates/core/src/crypto/: identity.rs  merkle.rs  mod.rs  utils.rs
crates/core/src/di/: container.rs  mod.rs
crates/core/src/identity/: attestation.rs  lib.rs  mock.rs  mod.rs  storage.rs
crates/core/src/interfaces/: economic.rs  identity.rs  mod.rs  reputation.rs  storage.rs
crates/core/src/networking/: discovery.rs  mod.rs  protocol.rs  tcp.rs
crates/core/src/storage/: file_storage.rs  memory_storage.rs  mock_storage.rs  mod.rs  versioning.rs
crates/core/src/utils/: mod.rs  serialization.rs  validation.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  storage_encryption.rs
crates/distributed-storage/: Cargo.toml
crates/distributed-storage/src/: dht.rs  encryption.rs  lib.rs  peer.rs  versioning.rs
crates/dsl/: Cargo.toml  README.md
crates/dsl/src/: contracts.rs  grammar.pest  lib.rs
crates/economic/: Cargo.toml
crates/economic/icn-mutual-credit/: CONFIDENTIAL_TRANSACTIONS.md  Cargo.toml  NEXT_STEPS.md  README.md
crates/economic/icn-mutual-credit/examples/: basic_transfer.rs  confidential_credit_chain.rs  confidential_tx.rs  credit_clearing.rs
crates/economic/icn-mutual-credit/src/: account.rs  confidential.rs  confidential_test.rs  credit_graph.rs  credit_line.rs  error.rs  lib.rs  transaction.rs  transaction_processor.rs  types.rs
crates/economic/src/: factory.rs  lib.rs
crates/economic/src/incentives/: mod.rs
crates/economic/src/ledger/: account_manager.rs  mod.rs  mutual_credit.rs  mutual_credit_v2.rs  transaction_processor.rs
crates/economic/src/resource/: mod.rs  types.rs
crates/federation/: Cargo.toml
crates/federation-storage-router/: Cargo.toml
crates/federation/src/: coordination.rs  lib.rs  storage_manager.rs
crates/governance/: Cargo.toml
crates/governance/src/: cross_federation.rs  execution.rs  federation.rs  lib.rs  manager.rs  voting.rs
crates/governance/src/dao/: mod.rs
crates/governance/src/dsl/: mod.rs
crates/governance/src/execution/: mod.rs
crates/governance/src/integrations/: mod.rs  vm.rs
crates/governance/src/proposals/: mod.rs
crates/governance/src/voting/: mod.rs
crates/identity/: Cargo.toml
crates/identity/icn-credentials/: Cargo.toml
crates/identity/icn-credentials/src/: credential.rs  issuer.rs  lib.rs  presentation.rs  proof.rs  registry.rs  schema.rs  selective_disclosure.rs  verifier.rs
crates/identity/icn-did/: Cargo.toml
crates/identity/icn-did/src/: federation.rs  lib.rs  manager.rs  resolver.rs  verification.rs
crates/identity/src/: credentials.rs  did.rs  lib.rs  mock.rs  reputation.rs  storage.rs
crates/integration/: Cargo.toml
crates/integration/src/: dsl_vm_integration.rs  lib.rs  mod.rs  overlay_integration.rs
crates/ledger/: Cargo.toml  README.md
crates/ledger/examples/: basic_example.rs
crates/ledger/src/: account_manager.rs  lib.rs  mutual_credit.rs  transaction_processor.rs
crates/ledger/tests/: transaction_processor_tests.rs
crates/network/: Cargo.toml  Makefile  README.md
crates/network/benches/: network_benchmarks.rs
crates/network/docs/: ARCHITECTURE.md
crates/network/examples/: circuit_relay_demo.rs  integrated_demo.rs  metrics_demo.rs  network_cli.rs  priority_messaging.rs  reputation_demo.rs  simple_network.rs
crates/network/scripts/: run_demos.sh  test_all_features.sh
crates/network/src/: adapter.rs  circuit_relay.rs  config.rs  discovery.rs  lib.rs  libp2p_compat.rs  messaging.rs  metrics.rs  node.rs  p2p.rs  reputation.rs  sync.rs  test_reputation.rs  tests.rs
crates/network/src/consensus/: mod.rs  proof_of_cooperation.rs
crates/network/src/overlay/: address.rs  dht.rs  mod.rs  tunneling.rs
crates/network/src/reputation/: enhanced_reputation.rs  mod.rs
crates/network/src/reputation_system/: mod.rs
crates/network/src/resource_sharing/: mod.rs
crates/network/src/sharding/: mod.rs
crates/network/src/tests/: mod.rs
crates/network/tests/: integration_tests.rs
crates/networking/: Cargo.toml
crates/networking/icn-networking/: Cargo.toml
crates/networking/icn-networking/examples/: basic_node.rs  testnet.rs
crates/networking/icn-networking/src/: discovery.rs  error.rs  lib.rs  node.rs  test_utils.rs  (+1 more)
crates/networking/src/: error.rs  lib.rs
crates/node/icn-node-core/: Cargo.toml
crates/reputation/: Cargo.toml
crates/reputation/src/: lib.rs
crates/resource/: Cargo.toml
crates/resource/src/: allocation.rs  lib.rs  ml_optimizer.rs  monitoring.rs  scheduling.rs  sharing.rs
crates/storage/: Cargo.toml  README.md
crates/storage/icn-storage-system/: Cargo.toml
crates/storage/src/: lib.rs  memory_storage.rs  metrics.rs  quota.rs  versioning.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: engine.rs  error.rs  executor.rs  lib.rs  operations.rs  security.rs  state.rs
examples/: Cargo.toml  compute_demo.sh  credential_storage_demo.sh  dependency_injection.rs  dsl_integration.rs  governance_example.icndsl  governance_test.rs  governed_storage_demo.sh  icn_testnet.rs  identity_and_credit.rs  identity_and_networking.rs  identity_storage_demo.sh  ipv6_overlay.rs  storage_encryption_demo.sh
(+299 files in other folders)
