[workspace]
members = [
    "crates/core",
    "crates/identity",
    "crates/governance",
    "crates/ledger",
    "crates/apps",
    "bin/node",
    "bin/cli",
    "crates/network",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ed25519-dalek = { version = "1.0" }
ring = "0.17"
hex = "0.4"
bs58 = "0.4"
rand = "0.7"

# Serialization
serde_yaml = "0.9"

# Cryptography
curve25519-dalek = "3.2"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10"
rand_core = "0.6"
sha2 = "0.10"
aes-gcm = "0.10.2"
argon2 = "0.5.1"
hkdf = "0.12.3"
pbkdf2 = "0.12.2"

# Networking and async

# Logging and utilities
env_logger = "0.10"

# Testing
tempfile = "3.3"
tokio-test = "0.4"
