[package]
name = "icn"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Intercooperative Network - A decentralized infrastructure for cooperative economies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/intercooperative-network/icn"

[dependencies]
# Internal crates
icn-core = { path = "crates/core" }
icn-identity = { path = "crates/identity" }
icn-governance = { path = "crates/governance" }
icn-networking = { path = "crates/networking" }
icn-network = { path = "crates/network" }
icn-economic = { path = "crates/economic" }
icn-federation = { path = "crates/federation" }
icn-resource = { path = "crates/resource" }
icn-storage = { path = "crates/storage" }
icn-distributed-storage = { path = "crates/distributed-storage" }
icn-dsl = { path = "crates/dsl" }
icn-vm = { path = "crates/vm" }
icn-cli = { path = "crates/cli" }

# External dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography dependencies
ed25519-dalek = { version = "1.0" }
ring = "0.17"
hex = "0.4"
bs58 = "0.4"
rand = "0.7"
sha2 = "0.10"
aes-gcm = "0.10.2"
curve25519-dalek = "3.2"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10"
rand_core = "0.6"
argon2 = "0.5.1"
hkdf = "0.12.3"
pbkdf2 = "0.12.2"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }

# Error handling
anyhow = "1.0"

[workspace]
members = [
    "crates/core",
    "crates/dsl",
    "crates/vm",
    "crates/governance",
    "crates/economic",
    "crates/identity",
    "crates/network",
    "crates/networking",
    "crates/federation",
    "crates/resource",
    "crates/storage",
    "crates/distributed-storage",
    "crates/cli",
    "crates/node",
    "crates/reputation",
    "crates/federation-storage-router",
    "crates/config",
    "crates/crypto",
    "crates/integration"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
ed25519-dalek = { version = "1.0" }
ring = "0.17"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
icn-economic = { path = "crates/economic" }
icn-mutual-credit = { path = "crates/economic/icn-mutual-credit" }
networking = { path = "crates/networking" }
federation = { path = "crates/federation" }
resource = { path = "crates/resource" }
storage = { path = "crates/storage" }
distributed-storage = { path = "crates/distributed-storage" }

# Serialization
serde_yaml = "0.9"

# Cryptography
curve25519-dalek = "3.2"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10"
rand_core = "0.6"
sha2 = "0.10"
aes-gcm = "0.10.2"
argon2 = "0.5.1"
hkdf = "0.12.3"
pbkdf2 = "0.12.2"

# Networking and async

# Logging and utilities
env_logger = "0.10"

# Testing
tempfile = "3.3"
tokio-test = "0.4"
