[package]
name = "icn-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "governance_test"
path = "governance_test.rs"

[dependencies]
icn-core = { path = "../crates/core" }
icn-dsl = { path = "../crates/dsl" }
icn-vm = { path = "../crates/vm" }
icn-governance = { path = "../crates/governance" }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3" 