[package]
name = "icn-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "governance_test"
path = "governance_test.rs"

[[bin]]
name = "dsl_integration"
path = "dsl_integration.rs"

[[bin]]
name = "dependency_injection"
path = "dependency_injection.rs"

[dependencies]
icn = { path = ".." }
icn-core = { path = "../crates/core" }
icn-economic = { path = "../crates/economic" }
icn-governance = { path = "../crates/governance" }
icn-dsl = { path = "../crates/dsl" }
icn-storage = { path = "../crates/storage" }
icn-vm = { path = "../crates/vm" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3" 