[package]
name = "icn-apps"
version = "0.1.0"
edition = "2021"
description = "Applications for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }
icn-ledger = { path = "../ledger" }
icn-governance = { path = "../governance" }
icn-network = { path = "../network" }

tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Web server for apps
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

[lib]
name = "icn_apps"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 