[package]
name = "icn-cli"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Command-line interface for the Intercooperative Network"
license = "MIT OR Apache-2.0"

[dependencies]
icn-federation = { path = "../federation" }
icn-resource = { path = "../resource" }
icn-network = { path = "../network" }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
directories = "5.0"

[[bin]]
name = "icn"
path = "src/main.rs"
