[package]
name = "icn-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities and types for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true } 