[package]
name = "icn-config"
version = "0.1.0"
edition = "2021"
authors = ["ICN Team"]
description = "Configuration system for ICN"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
