[package]
name = "icn-crypto"
version = "0.1.0"
authors = ["ICN Team"]
description = "Cryptographic utilities for the InterCooperative Network"
license = "MIT"

[dependencies]
ed25519-dalek = "1.0"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
