[package]
name = "distributed-storage"
version = "0.1.0"
edition = "2021"
description = "Distributed storage implementation for the Intercooperative Network"

[dependencies]
storage = { path = "../storage" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
