[package]
name = "icn-dsl"
version = "0.1.0"
edition = "2021"
authors = ["ICN Team"]
description = "Domain-Specific Language for ICN governance"
license = "MIT"

[dependencies]
thiserror = "1.0"
pest = "2.5"
pest_derive = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4" 