[package]
name = "icn-federation-storage-router"
version = "0.1.0"
edition = "2021"
authors = ["ICN Team"]
description = "Federation storage router for ICN"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal dependencies
icn-core = { path = "../core" }
icn-distributed-storage = { path = "../distributed-storage" }
icn-federation = { path = "../federation" }

[dev-dependencies]
tokio-test = "0.4"
