[package]
name = "icn-governance"
version = "0.1.0"
edition = "2021"
description = "Federated governance system for ICN"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Consensus
raft-consensus = "0.2" # Optional, for the simplest consensus protocol

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 