[package]
name = "icn-governance"
version = "0.1.0"
edition = "2021"
description = "Governance system for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }

tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Consensus
raft-consensus = "0.2" # Optional, for the simplest consensus protocol

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 