[package]
name = "icn-governance"
version = "0.1.0"
edition = "2021"
description = "Governance module for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-common = { workspace = true }
icn-vm = { workspace = true }
icn-storage = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }
chrono = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Consensus
raft-consensus = "0.2" # Optional, for the simplest consensus protocol

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 