[package]
name = "icn-identity"
version = "0.1.0"
edition = "2021"
description = "Identity management for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }

tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = { workspace = true }
futures = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
sha2 = "0.10"
ring = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 