[package]
name = "icn-ledger"
version = "0.1.0"
edition = "2021"
description = "Mutual Credit Ledger for ICN"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Cryptography for ledger verification
ring = { workspace = true }
merkle_tree = "0.5"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 