[package]
name = "icn-ledger"
version = "0.1.0"
edition = "2021"
description = "Ledger system for ICN"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Cryptography for ledger verification
ring = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
proptest = "1.2"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 