[package]
name = "icn-network"
version = "0.1.0"
edition = "2021"
description = "Network communication layer for ICN"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-core = { path = "../core" }
# icn-identity = { path = "../identity" }
# icn-ledger = { path = "../ledger" }
# icn-governance = { path = "../governance" }

# Async runtime and utilities
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Networking
libp2p = { version = "0.53", features = ["tokio", "noise", "yamux", "kad", "identify", "gossipsub", "mdns", "ping", "request-response", "tcp", "relay", "macros"] }
multiaddr = "0.18.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
hex = { workspace = true }
bs58 = { workspace = true }

# Metrics
prometheus = { version = "0.13", default-features = false }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "network_benchmarks"
harness = false 