[package]
name = "icn-network"
version = "0.1.0"
edition = "2021"
description = "Networking for the ICN Network"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
libp2p = { version = "0.55", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "identify", "kad", "gossipsub", "mdns", "tokio"] }

# Async runtime and utilities
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Networking
multiaddr = "0.18.0"

# Serialization
bincode = "1.3.3"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
hex = { workspace = true }
bs58 = { workspace = true }

# Metrics
prometheus = { version = "0.13", default-features = false }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "network_benchmarks"
harness = false 