[package]
name = "networking"
version = "0.1.0"
edition = "2021"
description = "Networking functionality for the InterCooperative Network"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"

# Optional dependencies for different network transports
tls-api = { version = "0.9", optional = true }
wireguard = { version = "0.1", optional = true }

[features]
default = []
tls = ["tls-api"]
wireguard-tunnel = ["wireguard"]
onion-routing = [] 