[package]
name = "icn-reputation"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Reputation system for the Intercooperative Network"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal crates
icn-core = { path = "../core" }
icn-identity = { path = "../identity" }
icn-crypto = { path = "../crypto" }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
