[package]
name = "icn-resource"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Resource management for the Intercooperative Network"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3"
criterion = "0.5"

[[bench]]
name = "resource_allocation"
harness = false
