[package]
name = "icn-vm"
version = "0.1.0"
edition = "2021"
description = "Virtual Machine for executing ICN Network governance and economic instructions"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-dsl = { path = "../dsl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { version = "1.32", features = ["full"] }
dashmap = "5.5"  # Thread-safe concurrent HashMap

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4" 