[package]
name = "icn-vm"
version = "0.1.0"
edition = "2021"
description = "Virtual Machine for executing ICN Network governance and economic instructions"
authors = ["ICN Developers"]
license = "MIT OR Apache-2.0"

[dependencies]
icn-common = { path = "../common" }
icn-dsl = { path = "../dsl" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4" 