[package]
name = "icn-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities and types for ICN"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1.9"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
