[package]
name = "icn-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities and types for ICN"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
