[package]
name = "icn-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities and types for the Intercooperative Network"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.61"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
log = "0.4.21"

[dev-dependencies]
tempfile = "3.8"
