[package]
name = "icn-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for ICN"

[dependencies]
# Internal dependencies
icn-common = { path = "../icn-common" }

# External dependencies
rand.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
k256.workspace = true
serde.workspace = true
thiserror.workspace = true
bs58 = "0.5"
base64 = "0.13"

[features]
default = ["std", "ed25519"]
std = ["serde/std", "rand/std"]
alloc = ["serde/alloc"]
ed25519 = ["ed25519-dalek"]
secp256k1 = ["k256"]
