[package]
name = "icn-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic utilities for ICN"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.61"
rand = "0.7.3"
sha2 = "0.9.9"
bs58 = "0.4.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
k256 = "0.11.6"
chacha20poly1305 = "0.9.1"
base64 = "0.13.1"
zeroize = { version = "1.7.0", features = ["derive"] }
icn-common = { path = "../icn-common" }

[features]
default = []
ed25519 = []
secp256k1 = []
hardware-acceleration = []
