[package]
name = "icn-mutual-credit"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Mutual credit system for the Intercooperative Network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/intercoin/icn"

[dependencies]
# Internal dependencies
icn-common = { path = "../../core/icn-common" }
icn-crypto = { path = "../../core/icn-crypto" }
icn-did = { path = "../../identity/icn-did" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
rand = "0.8" 