[package]
name = "icn-mutual-credit"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Mutual credit system for the Intercooperative Network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/intercoin/icn"

[dependencies]
# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tokio = { version = "1.36", features = ["full", "test-util", "macros"] }

[[example]]
name = "basic_transfer"
path = "examples/basic_transfer.rs"

[[example]]
name = "credit_clearing"
path = "examples/credit_clearing.rs"

[[example]]
name = "confidential_tx"
path = "examples/confidential_tx.rs"

[[example]]
name = "confidential_credit_chain"
path = "examples/confidential_credit_chain.rs" 