[package]
name = "icn-credentials"
version = "0.1.0"
edition = "2021"
description = "Verifiable credentials implementation for ICN"

[dependencies]
icn-common = { path = "../../core/icn-common" }
icn-did = { path = "../icn-did" }
icn-crypto = { path = "../../core/icn-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
bs58 = "0.4"
multibase = "0.9"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4" 