[package]
name = "icn-did"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DID implementation for ICN"

[dependencies]
# Internal dependencies
icn-common = { path = "../../core/icn-common" }
icn-crypto = { path = "../../core/icn-crypto" }
icn-storage-system = { path = "../../storage/icn-storage-system" }

# External dependencies
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
bs58 = "0.4"
multibase = "0.9"

[dev-dependencies]
tempfile = "3.8"
