[package]
name = "icn-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Networking layer for ICN with TLS 1.3 support"

[dependencies]
# Core dependencies
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
futures.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# ICN dependencies
icn-common = { path = "../../core/icn-common" }

[dev-dependencies]
tokio-test.workspace = true
rcgen.workspace = true
