[package]
name = "icn-networking"
version = "0.1.0"
edition = "2021"

[features]
default = []
testing = ["rcgen"]  # Feature flag for test utilities and examples

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.25"
rustls = "0.22"
webpki-roots = "0.26"
futures.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# ICN dependencies
icn-common = { path = "../../core/icn-common" }

# Additional dependencies
rcgen = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
tokio-test.workspace = true

[[example]]
name = "testnet"
required-features = ["testing"]
